fixed box alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,17 @@ p.progress-level {
     height: 192px;
 }
 
+.box {
+    width: 80%;
+    height: 50%;
+  }
+  
+  .box2 {
+      width: 80%;
+      height: 50%;
+    top: 100px;
+  }
+
 /*----PORTFOLIO SECTION----*/
 .overlay {
     width: 80%;
